add tab and list

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,5 +1,5 @@
 {
-  "package": "com.android.hq.ganktoutiao.quickapp",
+  "package": "com.hq.quickapp.ganktoutiao",
   "name": "GankQuickApp",
   "versionName": "1.0.0",
   "versionCode": "1",
