--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,8 +1,8 @@
 {
   "package": "com.hq.quickapp.ganktoutiao",
-  "name": "GankQuickApp",
+  "name": "技术头条",
   "versionName": "1.0.0",
-  "versionCode": "1",
+  "versionCode": "1000000",
   "minPlatformVersion": "1020",
   "icon": "/Common/logo.png",
   "features": [
